--- a/src/app/Styles/ground.module.css
+++ b/src/app/Styles/ground.module.css
@@ -1,115 +1,314 @@
 .mainContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    padding: 38px;
-    background-color: #202020;
-  }
-  .teamInput {
-    background: transparent;
-    color: #fff;
-    margin-right: 20px;
-    margin-bottom: 10px;
-    border: none;
-    box-shadow: none;
-    width: 100%;
-  }
-  .teamInput:focus {
-    background: transparent;
-    color: #fff;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  padding: 38px;
+  background-color: #202020;
+}
+.teamInput {
+  background: transparent;
+  color: #fff;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  border: none;
+  box-shadow: none;
+  width: 100%;
+}
+.teamInput:focus {
+  background: transparent;
+  color: #fff;
+}
 
-  .heading p {
-    color: #fea013;
-    margin-bottom: 0;
-  }
-  .heading {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: flex-start;
-  }
-  
-  .overview_content{
-    display: flex;
-    background-color: #2d2d2d;
-    padding: 32px;
-    border-radius: 8px;
-    width: 90%;
-    height: 80%
-  }
+.heading p {
+  color: #fea013;
+  margin-bottom: 0;
+}
+.heading {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+}
 
-  .imgContainer{
-    flex: 1;
-    position: relative;
-  }
-  .playerInfo{
-    background-color: #222222;
-  }
-  .imgContainer img {
-    max-width: 100%; 
-    height: auto; 
-  }
+.overview_content {
+  display: flex;
+  background-color: #2d2d2d;
+  padding: 32px;
+  border-radius: 8px;
+  width: 90%;
+  height: 80%;
+}
 
-  .circle {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    position: absolute;
-    border-radius: 50%;
-    background-color: #ffffff; /* Circle color */
-  }
-  .circle span{
-    text-wrap: nowrap;
-    color: #2d2d2d;
-    font-weight: bold;
-    align-self: center;
-    
-  }
+.imgContainer {
+  flex: 1;
+  position: relative;
+}
+.playerInfo {
+  display: flex;
+  flex-direction: column;
+  background-color: #222222;
+  align-items: center;
+}
+.imgContainer img {
+  max-width: 100%;
+  height: auto;
+}
 
-  .ground_modal_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .ground_modal_container p{
-    color: #a3a3a3;
-    font-size: 14px;
+.circle {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #ffffff; /* Circle color */
+}
+.circle span {
+  text-wrap: nowrap;
+  color: #2d2d2d;
+  font-weight: bold;
+  align-self: center;
+}
 
-  }
+.ground_modal_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.ground_modal_container p {
+  color: #a3a3a3;
+  font-size: 14px;
+}
 
-  .modal_icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: .6rem;
+.modal_icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 0.6rem;
+}
+.modal_icon h6 {
+  margin-bottom: 0;
+}
 
-  }
-  .modal_icon h6{
-    margin-bottom: 0;
-  }
+.modal_icon svg {
+  color: #fea013;
+}
 
-  .modal_icon svg{
-    color: #FEA013;
-  }
 
- 
-  /* Position and size for each circle */
-  .circle:nth-child(1) { top: 10%; left: 10%; width: 35px; height: 35px;  background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;}
-  .circle:nth-child(2) { top: 48%; left: 10%; width: 25px; height: 25px;   background-color: #fea013; color: #fff; text-align: center;}
-  .circle:nth-child(3) { top: 10%; left: 20%; width: 25px; height: 25px;  background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff; }
-  .circle:nth-child(4) { top: 30%; left: 18%; width: 25px; height: 25px;  background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;}
-  .circle:nth-child(5) { top: 50%; right: 40%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(6) { top: 59%; right: 76%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(7) { top: 80%; left: 20%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(8) { top: 10%; right: 26%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(9) { top: 15%; left: 38%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(10) { top: 40%; left: 40%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
-  .circle:nth-child(11) { top: 70%; left: 50%; width: 25px; height: 25px; background-color: #2d2d2d; color: #fff; text-align: center; border: 2px solid #fff;} 
+.modal_btn{
+  border: none;
+  outline: none;
+  padding: 7px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: transparent;
+  color: #fea013;
+}
+
+.nation_img{
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+
+
+.player_pic {
+  position: relative;
+  display: inline-block;
+}
+.player_title {
+  position: absolute;
+  top: 100%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+}
+
+
+
+.player_title h4 {
+  text-wrap: nowrap;
+  color: #fff;
+}
+.player_title h6 {
+  color: #fea013;
+  text-align: start;
+}
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+
+.player_data{
+  border-bottom: 2px solid #494949;
+}
+
+
+.bio{
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  margin-top: 40px;
+  justify-self: flex-start;
+}
+.info{
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+}
+.text1{
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.text2{
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.pro_info{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 20px;
+  align-items: flex-start;
+   
+}
+.next_info{
+  display: flex;
+  flex-direction: column;
+
+}
+.next_info span{
+  color: #cbcbcb;
+  text-wrap: nowrap;
+  margin-top: 0;
+}
+.next_info h2{
+  color: #fea013;
+  margin-bottom: 2px;
+  font-size: 24px !important;
+}
+
+
+
+
+
+/* Position and size for each circle */
+.circle:nth-child(1) {
+  top: 10%;
+  left: 10%;
+  width: 35px;
+  height: 35px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(2) {
+  top: 48%;
+  left: 10%;
+  width: 25px;
+  height: 25px;
+  background-color: #fea013;
+  color: #fff;
+  text-align: center;
+}
+.circle:nth-child(3) {
+  top: 10%;
+  left: 20%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(4) {
+  top: 30%;
+  left: 18%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(5) {
+  top: 50%;
+  right: 40%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(6) {
+  top: 59%;
+  right: 76%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(7) {
+  top: 80%;
+  left: 20%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(8) {
+  top: 10%;
+  right: 26%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(9) {
+  top: 15%;
+  left: 38%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(10) {
+  top: 40%;
+  left: 40%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
+.circle:nth-child(11) {
+  top: 70%;
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  background-color: #2d2d2d;
+  color: #fff;
+  text-align: center;
+  border: 2px solid #fff;
+}
