--- a/src/app/Styles/landpage.module.css
+++ b/src/app/Styles/landpage.module.css
@@ -126,6 +126,10 @@
 .row{
   font-weight: normal;
     font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 170px;
 }
 .table_img{
   width: 24px;
