--- a/src/app/Styles/toaster.module.css
+++ b/src/app/Styles/toaster.module.css
@@ -1,11 +1,11 @@
 .toaster {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 20px;
+    right: 20px;
     background-color: #333;
     color: #fff;
-    padding: 10px 15px;
-    border-radius: 0 0 5px 5px;
+    padding: 8px 65px;
+    border-radius: 8px 0 8px 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
@@ -17,8 +17,13 @@
     opacity: 1;
     pointer-events: auto;
   }
+
+  .icon{
+    margin-left: 10px;
+    font-weight: bold;
+  }
   
-  .close-button {
+  .close_btn {
     background: none;
     border: none;
     color: #fff;
